Modified gradient descent contents

--- a/GradientDescent-sun-9-25-22-problem.ipynb
+++ b/GradientDescent-sun-9-25-22-problem.ipynb
@@ -24,27 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d97670b2",
+   "execution_count": null,
+   "id": "48901f2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def f(w, x):\n",
-    "    return w @ x\n",
+    "    # TODO\n",
     "\n",
     "\n",
     "def gradf(w, x):\n",
-    "    return x\n",
+    "    # TODO\n",
     "\n",
     "\n",
-    "def gradient_descent(f, gradf, eta, w, x, itration=10000):\n",
-    "    prev = 100000\n",
-    "    while abs((f_val := (f(w, x))  - prev)) >= 0.001 or itration >= 0:\n",
-    "        prev = f_val\n",
-    "        w = w - eta * gradf(w, x)\n",
-    "        itration -= 1\n",
-    "        \n",
-    "    return w"
+    "def gradient_descent(f, gradf, eta, w):\n",
+    "    # TODO"
    ]
   }
  ],
