--- a/Binary classification in 2D.ipynb
+++ b/Binary classification in 2D.ipynb
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a47074a",
+   "id": "d466d529",
    "metadata": {},
    "source": [
     "# Solution\n",
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f9e1f63",
+   "id": "660fe093",
    "metadata": {},
    "source": [
     "## 1: knn"
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ee9ca714",
+   "id": "9cfde4c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b3b4c446",
+   "id": "31aecdec",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51176104",
+   "id": "ee66b276",
    "metadata": {},
    "source": [
     "## 2: Linear discriminant"
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9b13944b",
+   "id": "ccc8102d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,29 +1237,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "856d6172",
+   "execution_count": 51,
+   "id": "d42eb4e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def lda(x):\n",
     "    x1 = np.concatenate((x, [1]))\n",
-    "    return np.round((x1 @ w + 1)/2)"
+    "    return x1 @ w > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "7c867f80",
+   "execution_count": 52,
+   "id": "4177474b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.938"
+       "0.948"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6f9b3c",
+   "id": "fd88e66a",
    "metadata": {},
    "outputs": [],
    "source": []
