Updated the stock price question/answer

--- a/StockPrice-2-25-23-problem.ipynb
+++ b/StockPrice-2-25-23-problem.ipynb
@@ -28,12 +28,12 @@
    "source": [
     "# Time series: descriptive statistics and smoothing\n",
     "\n",
-    "`daily_stock[]` is an array of 124 stock prices, each sampled at the beginning of the day. This notebook is about computing descriptive statistics of times series, interpolation, and smoothing."
+    "`daily_stock[]` is an array of 124 stock prices, each sampled at the beginning of the day. This is a multi-part problem about computing descriptive statistics of times series, interpolation, and smoothing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d3388a1e",
    "metadata": {},
    "outputs": [],
@@ -54,23 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ee2fa33d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mean(X):\n",
+    "    # TODO\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6d5a0a44",
    "metadata": {},
    "outputs": [],
    "source": [
     "def var(X):\n",
+    "    # TODO\n",
     "    pass"
    ]
   },
@@ -81,17 +83,18 @@
    "source": [
     "## 2: Windowed mean and variance\n",
     "\n",
-    "Write a function that takes a one-dimensional array, a start index, and an end index, and returns the mean and variance of the part of the array inside the window. You can assume the indices are valid and in the right order."
+    "Write a function that takes a one-dimensional array, a start index, and an end index, and returns the mean and variance of the part of the array inside the window. The window includes the start and end index. You can assume the indices are valid and in the right order."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c6796f6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def win_mean_var(X, start_i, end_i):\n",
+    "    # TODO\n",
     "    pass"
    ]
   },
@@ -100,20 +103,25 @@
    "id": "fbc939b9",
    "metadata": {},
    "source": [
-    "## 3: Trailing window\n",
+    "## 3: Moving average/Trailing window\n",
     "\n",
-    "Write a function that takes a one-dimensional array `X[]` and a window width `width`, and returns the arrays of windowed means and variances. The `i`th output element is based on `width` *previous* elements of `X[]` (not looking into the future). Return arrays of the same length as `X[]`; make your own choice about how to deal with the beginning indices before `width` previous samples are available."
+    "Write a function that takes a one-dimensional array `X[]` and a window width `width`, and returns the arrays of windowed means and variances. The `i`th output element is based on `width` *previous* elements of `X[]` (not looking into the future, up to *and including* index `i`). That is, `mean[i]` is the mean of `X[i-width...i]`. Return arrays of the same length as `X[]`; at the beginning of `X[]`, before `width` samples are available, `mean[i]` uses `X[0...i]` (same for variance).\n",
+    "\n",
+    "e.g. given this array `[0, 1, 2, 3]` and the `width` of 2, the return `mean` array should look like this `[mean([0]), mean([0, 1]), mean([1, 2]), mean([2, 3])` The return `variance` array should look like this `[var([0]), var([0, 1]), var([1, 2]), var([2, 3])]`\n",
+    "\n",
+    "You can assume the width is always less than or equal to the lengh of the given array "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1350aa29",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sliding_mean_var(X, width):\n",
-    "    pass"
+    "    # TODO\n",
+    "    pass## 3: Moving average/Trailing window"
    ]
   },
   {
@@ -151,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
