Renamed overfit problem

--- a/Overfit-3-12-23-solution.ipynb
+++ b/Overfit-3-12-23-solution.ipynb
@@ -19,7 +19,8 @@
    "id": "9ee3a0ae",
    "metadata": {},
    "source": [
-    "You have a matrix $X$ of 100 samples of 100 input features, and a vector $Y$ of 100 outputs. Using this training data, you want to fit a linear model that will make good predictions of $y$ given new $x$s, $\\hat y = a^T x$."
+    "# Problem Statement\n",
+    "* You have a matrix $X$ of 100 samples of 100 input features, and a vector $Y$ of 100 outputs. Using this training data, you want to fit a linear model that will make good predictions of $y$ given new $x$s, $\\hat y = a^T x$."
    ]
   },
   {
@@ -50,11 +51,14 @@
    "id": "bc1e7496",
    "metadata": {},
    "source": [
-    "**Question 1:** if you fit $a$ using all of $X$ and $Y$ and no regularization,  how good will the fit to the **training** data set be? Why?\n",
+    "## Problem 1\n",
+    "\n",
+    "* if you fit $a$ using all of $X$ and $Y$ and no regularization,  how good will the fit to the **training** data set be? Why?\n",
     "\n",
     "**Answer:** very good! there are as many features as data points, so you can even invert the training data matrix to get a perfect fit.\n",
     "\n",
-    "**Question 2:** How well do you expect your model will perform on new, unseen data drawn from the same distribution? Why?\n",
+    "## Problem 2\n",
+    "* How well do you expect your model will perform on new, unseen data drawn from the same distribution? Why?\n",
     "\n",
     "**Answer:** very bad, since the high number of features and low number of data points leads to tons of overfitting"
    ]
@@ -64,7 +68,9 @@
    "id": "85b7fd4c",
    "metadata": {},
    "source": [
-    "**Question 3:** The below function fits a linear model using least squares and L1 regularization (lasso regression). How can you use this to produce a model that will generalize well? Why does regularization improve generalization?\n",
+    "## Problem 3\n",
+    "\n",
+    "* The below function fits a linear model using least squares and L1 regularization (lasso regression). How can you use this to produce a model that will generalize well? Why does regularization improve generalization?\n",
     "\n",
     "**Answer:** Fit to training data set with appropriate regularization strength. This works because regularization forces the model to produce a simpler model, which rejects noise in the training data even at the expense of higher training error."
    ]
@@ -87,9 +93,12 @@
    "id": "22dd432b",
    "metadata": {},
    "source": [
-    "**Question 4:** Using whatever technique you think is appropriate, write code to find the amount of regularization that will give the best generalization. Use it to find the best regularization parameter and fit a model with that parameter.\n",
+    "# Problem 4: \n",
+    "Using whatever technique you think is appropriate, write code to find the amount of regularization that will give the best generalization. Use it to find the best regularization parameter and fit a model with that parameter.\n",
     "\n",
-    "**Answer:** One way is with cross validation:"
+    "**Answer:** One way is with cross validation:\n",
+    "\n",
+    "<img src=\"https://scikit-learn.org/stable/_images/grid_search_cross_validation.png\" width=\"500\" height=\"200\">"
    ]
   },
   {
@@ -203,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
