Added change in time series

--- a/ChangeInTimeSeries-problem.ipynb
+++ b/ChangeInTimeSeries-problem.ipynb
@@ -8,8 +8,9 @@
     "# Problem Statement\n",
     "\n",
     "$X$ contains a year of daily stock prices for a certain company. You know that sometime around the middle of the year, something changed inside the company, possibly affecting the price of the stock.\n",
-    "1. Are the stock prices different before and after the change? Show your answer quantitatively Your answer should work without specifically deciding when the change occurred.\n",
-    "2. If there's a change, is the change making the stock price going up or down? Quantify your answer."
+    "1. Are the stock prices different before and after the change? Show your answer quantitatively. Your answer should work without specifically deciding when the change occurred.\n",
+    "1. If there's a change, is the change making the stock price go up or down? Quantify your answer.\n",
+    "1. Is there a trend in the data? Characterize the behavior of the stock prices before and after the change."
    ]
   },
   {
