add solution and edit writing

--- a/Binary change detection problem.ipynb
+++ b/Binary change detection problem.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2484df23",
+   "id": "6d1eeb0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,22 +14,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "449a6ebd",
+   "id": "300de57d",
    "metadata": {},
    "source": [
     "## Change-point detection for binary time series\n",
     "\n",
-    "Imagine that it's your job to make sure a certain server is up an running as often as possible. Every day for the past year, you've recorded a \"0\" in your log if the server didn't crash that day, and a \"1\" if it did crash. Unfortunately, you're pretty sure that crashes are more frequent now than they were at the beginning of the year, probably because of some bad deployment you made at some point.\n",
+    "Imagine that it's your job to make sure a certain server is up and running as often as possible. Every day for the past year, you've recorded a \"0\" in your log if the server didn't crash that day, and a \"1\" if it did crash. Unfortunately, you're pretty sure that crashes are more frequent now than they were at the beginning of the year, probably because of some bad deployment you made at some point.\n",
     "\n",
     "Now, you need to look at the logs and see if crashes are actually more common now than they were before. If they are more common, find out roughly when the bad deployment probably happened. That is, given a sequence $\\{C_n\\}_{n=0}^{364}$ of 0s and 1s, determine whether the probabilty of getting a 1 is higher at the end than at the beginning. Then, if it is higher, estimate the point in time $n_0$ when the probability went up.\n",
     "\n",
-    "There are lots of valid approaches to this problem!"
+    "This is a hard problem with more than one valid approach! It's ok to propose a solution you don't think is optimal."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3dde2e68",
+   "id": "782efacd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcc41cdf",
+   "id": "926f2b8c",
    "metadata": {},
    "outputs": [],
    "source": []
